--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -80,4 +80,23 @@ http {
 			proxy_hide_header Content-Disposition;
 		}
 	}
+	server {
+		listen 443 ssl;
+                ssl_certificate /etc/nginx/ssl/vectary.com/fullchain.pem;
+                ssl_certificate_key /etc/nginx/ssl/vectary.com/privkey.pem;
+
+		location /api/store/ {
+			proxy_pass http://relay;
+		}
+		location ~ ^/api/[1-9]\d*/ {
+			proxy_pass http://relay;
+		}
+		location / {
+			proxy_pass http://sentry;
+		}
+		location /_static/ {
+			proxy_pass http://sentry;
+			proxy_hide_header Content-Disposition;
+		}
+	}
 }
