New vhosts inbucket and cors

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -65,6 +65,7 @@ http {
 
 	server {
 		listen 80;
+		server_name sentry.vectary.com;
 
 		location /api/store/ {
 			proxy_pass http://relay;
@@ -82,6 +83,7 @@ http {
 	}
 	server {
 		listen 443 ssl;
+		server_name sentry.vectary.com;
                 ssl_certificate /etc/nginx/ssl/vectary.com/fullchain.pem;
                 ssl_certificate_key /etc/nginx/ssl/vectary.com/privkey.pem;
 
@@ -98,5 +100,51 @@ http {
 			proxy_pass http://sentry;
 			proxy_hide_header Content-Disposition;
 		}
+	}
+	server {
+		listen 443 ssl;
+		server_name cors.vectary.com;
+                ssl_certificate /etc/nginx/ssl/vectary.com/fullchain.pem;
+                ssl_certificate_key /etc/nginx/ssl/vectary.com/privkey.pem;
+
+                location / {
+                    proxy_http_version 1.1;
+                    proxy_set_header Connection "Keep-Alive";
+                    proxy_set_header Proxy-Connection "Keep-Alive";
+                    proxy_pass http://172.17.0.1:8089;
+                }
+	}
+	server {
+		listen 443 ssl;
+		server_name inbucket.vectary.com;
+                ssl_certificate /etc/nginx/ssl/vectary.com/fullchain.pem;
+                ssl_certificate_key /etc/nginx/ssl/vectary.com/privkey.pem;
+                allow 3.122.22.69; #vectary vpn
+                allow 212.89.250.27; #vectary office
+                allow 95.102.220.153; #tomas.corej ip
+                deny all;
+
+                location / {
+                  proxy_http_version 1.1;
+                  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                  proxy_set_header X-Forwarded-Proto https;
+                  proxy_set_header Host $http_host;
+                  proxy_set_header Connection "Keep-Alive";
+                  proxy_set_header Proxy-Connection "Keep-Alive";
+
+                  proxy_pass http://172.17.0.1:19000;
+                }
+
+                location /api/v1/monitor/messages {
+                  proxy_http_version 1.1;
+                  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                  proxy_set_header X-Forwarded-Proto https;
+                  proxy_set_header Host $http_host;
+                  proxy_set_header Upgrade $http_upgrade;
+                  proxy_set_header Connection "Upgrade";
+
+                  proxy_pass http://172.17.0.1:19000;
+
+                }
 	}
 }
